simplify example boxes

--- a/example/pages/start.html
+++ b/example/pages/start.html
@@ -1,5 +1,5 @@
 <div class="markdown">
 #That`s an example Homepage
-This is the homepage of {{fullname}}.    
+This is the homepage of [{{mail}}](mailto:{{mail}}).  
 It is build with python, jinja and jquery.
 </div>
