example for lecture site  * publish downloads via .htacces timeformat  * datetime filter

--- a/sources/index.html
+++ b/sources/index.html
@@ -150,7 +150,7 @@ $(document).ready(function(){
                         </div>
                     </div>
                     <div id="owner">
-                        <span id="owner-text" style="float:right; margin-right:31px">letzte Änderung: {{date}}</span>
+                        <span id="owner-text" style="float:right; margin-right:31px">letzte Änderung: {{date|datetimeformat}}</span>
                     <span id="owner-text">KIT – Die Forschungsuniversität in der Helmholtz-Gemeinschaft</span></div>
                 </div>
             </div>
