use unicode umlauts in index.html

--- a/sources/index.html
+++ b/sources/index.html
@@ -150,8 +150,8 @@ $(document).ready(function(){
                         </div>
                     </div>
                     <div id="owner">
-                        <span id="owner-text" style="float:right; margin-right:31px">letzte Änderung: {{date|datetimeformat}}</span>
-                    <span id="owner-text">KIT – Die Forschungsuniversität in der Helmholtz-Gemeinschaft</span></div>
+                        <span id="owner-text" style="float:right; margin-right:31px">letzte &Auml;nderung: {{date|datetimeformat}}</span>
+                    <span id="owner-text">KIT – Die Forschungsuniversit&auml;t in der Helmholtz-Gemeinschaft</span></div>
                 </div>
             </div>
         </div>
