--- a/sources/index.html
+++ b/sources/index.html
@@ -10,6 +10,8 @@
 <script src="jquery/jquery-1.4.min.js" type="text/javascript"></script>
 <script src="jquery/jquery.ba-hashchange.js" type="text/javascript"></script>
 <script src="https://cdn.rawgit.com/showdownjs/showdown/1.3.0/dist/showdown.min.js" type="text/javascript"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.8.0/styles/default.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.8.0/highlight.min.js"></script>
 
 <script type="text/javascript">
 
@@ -58,7 +60,10 @@ function openPage(file) {
                 html = converter.makeHtml(text);
                 $(this).html(html);
             });
-        
+            $('code').each(function(i, block) {
+                hljs.highlightBlock(block);
+            });
+       
     });
 }
 
