--- a/sources/index.html
+++ b/sources/index.html
@@ -110,7 +110,7 @@ $(document).ready(function(){
             <div id="head">
                 <div id="logo"><a href="http://www.kit.edu" title="KIT-Logo - Link zur KIT-Startseite"><img src="img/intern/kit_logo_V2_de.png" alt="KIT-Logo - Link zur KIT-Startseite"></a></div>
                 <div id="head-image" style="background-image:url('img/logo.jpg')">
-                    <div id="head-text" class="big_font">{{title}}</div><div id="head-text-corner">&nbsp;</div>                </div>
+                    <div id="head-text" class="big_font">{{startpage.title}}</div><div id="head-text-corner">&nbsp;</div>                </div>
             </div>
             <div class="spacer"></div>
             <div id="container">
